*********************************************************************************************
*                                  CHANGE LOG 1.0.1 - > 1.0.2                               *
*********************************************************************************************

 * (4/11/2011) vsouhrada
    # 213
      
      CHANGED: edited build.xml - changed version of JERPA to 1.0.2 
      ADDED  : Required files for installation 

*********************************************************************************************
*                                  CHANGE LOG 1.0.0 - > 1.0.1                               *
*********************************************************************************************

  * (4/23/2011) Petr Miko
    # 219

    Following changes are both in trunk and branch 1.0.1.

    CHANGED: getActionAnalyseSelected method => getActionVisualizeSelected
    CHANGED: variables like analyse*** => visualize***
    CHANGED: EDEDBPerspective and Toolbar: corrected name of called method.

  * (4/23/2011) Petr Miko
    # 218

    Following changes are both in trunk and branch 1.0.1.

    CHANGED: ActionAnalyseSelected => ActionVisualizeSelected
    CHANGED: Fixed bug with selected files in tables (wrong condition)
    CHANGED: Changed isFirstRun method to getter method

  * (4/22/2011) Petr Miko
    # 217
  
    Following changes are both in trunk and branch 1.0.1.
  
    CHANGED: Open download directory is active only if is Desktop enviroment supported.
    CHANGED: Fixed buttons/items visibility bug.

  * (4/22/2011) Petr Miko
    # 216
    CHANGED: Fixed bug when OfflineTable would not fill the user table.

  * (4/21/2011) Petr Miko
    # 215
    
    Following changes are both in trunk and branch 1.0.1.
    CHANGED: ActionDownloadSelected - if file is downloading, another request for its downloading is ignored. (bugfix)
        
 
  * (4/21/2011) Petr Miko
    # 214
     
      Following changes are both in trunk and branch 1.0.1.
      